[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audisect"
version = "1.0.0"
description = "Audio transcription, segmentation, and sentiment analysis tool"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "nltk>=3.8",
  "vaderSentiment>=3.3.2",
  "transformers>=4.40",
  "openai-whisper>=20231117",
  "typer>=0.12",
  "safetensors>=0.4.5"
]

[project.scripts]
audisect = "audisect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
